@@ -1,6 +1,6 @@
 /* valadestructor.vala
  *
- * Copyright (C) 2006-2007  Jürg Billeter
+ * Copyright (C) 2006-2008  Jürg Billeter
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -31,16 +31,16 @@ public class Vala.Destructor : Symbol {
 	 */
 	public Block body { get; set; }
 	
-	private bool _instance = true;
-	
+	/**
+	 * Specifies the generated `this' parameter for instance methods.
+	 */
+	public FormalParameter this_parameter { get; set; }
+
 	/**
 	 * Specifies whether this is an instance or a class destructor.
 	 */
-	public bool instance {
-		get { return _instance; }
-		set { _instance = value; }
-	}
-	
+	public bool instance { get; set; default = true; }
+
 	/**
 	 * Creates a new destructor.
 	 *
